# #find source
# file(GLOB TEST_SOURCES ${PROJECT_SOURCE_DIR}/test/*.cpp)
#
# # execute file
# add_executable(skiplist_test ${TEST_SOURCES})
#
# # add lib
# target_link_libraries(skiplist_test skiplist)
#
# #set execute location
# set_target_properties(skiplist_test PROPERTIES
#   RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin
# )
#
#
